# pytpm20

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  setup.py
src/: CMakeLists.txt  demo.c  init.c  pub.c  pytpm20.c  pytpm20.h  random.c  sign.c  utils.c  utils.h
tests/: test.py  tools.sh  tpm2-tools.sh
tpm20/: __init__.py
